CREATE TYPE "enrollment_status" AS ENUM (
  'ENROLLED',
  'PASSED',
  'FAILED',
  'WITHDRAWN'
);

CREATE TABLE "career" (
  "career_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "university_id" bigint NOT NULL,
  "duration" int,
  "degree_awarded" varchar
);

CREATE TABLE "university" (
  "university_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "address" varchar,
  "phone_number" varchar,
  "email" varchar UNIQUE NOT NULL
);

CREATE TABLE "course" (
  "course_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "career_id" bigint NOT NULL
);

CREATE TABLE "section" (
  "section_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "course_id" bigint NOT NULL,
  "teacher_id" bigint NOT NULL,
  "classroom" varchar,
  "period" varchar,
  "schedule" varchar
);

CREATE TABLE "student" (
  "student_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "birthdate" date,
  "phone_number" varchar,
  "career_id" bigint NOT NULL,
  "email" varchar UNIQUE NOT NULL,
  "address" varchar
);

CREATE TABLE "teacher" (
  "teacher_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "birthdate" date,
  "phone_number" varchar,
  "email" varchar UNIQUE NOT NULL,
  "university_id" bigint NOT NULL
);

CREATE TABLE "enrollment" (
  "enrollment_id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "student_id" bigint NOT NULL,
  "section_id" bigint NOT NULL,
  "enrollment_date" date,
  "status" enrollment_status NOT NULL,
  "final_grade" int
);

CREATE UNIQUE INDEX ON "career" ("university_id", "name");

CREATE UNIQUE INDEX ON "course" ("career_id", "name");

ALTER TABLE "enrollment" ADD FOREIGN KEY ("section_id") REFERENCES "section" ("section_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "enrollment" ADD FOREIGN KEY ("student_id") REFERENCES "student" ("student_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "teacher" ADD FOREIGN KEY ("university_id") REFERENCES "university" ("university_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "career" ADD FOREIGN KEY ("university_id") REFERENCES "university" ("university_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "section" ADD FOREIGN KEY ("course_id") REFERENCES "course" ("course_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "course" ADD FOREIGN KEY ("career_id") REFERENCES "career" ("career_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "student" ADD FOREIGN KEY ("career_id") REFERENCES "career" ("career_id") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "section" ADD FOREIGN KEY ("teacher_id") REFERENCES "teacher" ("teacher_id") DEFERRABLE INITIALLY IMMEDIATE;
